plugins {
    id 'com.github.johnrengelman.shadow' version '7.1.0' apply false
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'com.github.johnrengelman.shadow'

    group 'xyz.oribuin.eternalcrates'
    version '1.0.5'

    targetCompatibility = JavaVersion.VERSION_16
    sourceCompatibility = JavaVersion.VERSION_16

    repositories {
        mavenCentral()
        mavenLocal()

        maven { url 'https://libraries.minecraft.net' }
        maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots/" }
        maven { url "https://repo.rosewooddev.io/repository/public/" }
        maven { url "https://repo.extendedclip.com/content/repositories/placeholderapi/" }
        maven { url "https://repo.codemc.org/repository/maven-public/" }
        maven { url 'https://jitpack.io' }
        maven { url 'https://erethon.de/repo/' }
        maven { url 'https://mvn.lumine.io/repository/maven-public/' }
    }
}

dependencies {
    implementation project(':Plugin')
    implementation project(':NMS:Wrapper')
    implementation project(':NMS:v1_16_R3')
    implementation project(path: ':NMS:v1_17_R1', configuration: 'remapped')
    implementation project(path: ':NMS:v1_18_R1', configuration: 'remapped')
    implementation project(path: ':NMS:v1_18_R2', configuration: 'remapped')
}

shadowJar {
    archiveClassifier.set(null)
    relocate "xyz.oribuin.gui", "${project.group}.libs.gui"
    relocate "org.jetbrains", "${project.group}.libs.jetbrains"
    relocate "dev.rosewood.rosegarden", "${project.group}.libs.rosegarden"
}

tasks.getByName("build").dependsOn("shadowJar")
